# andffme

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mind/andffme/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Init.cpp  PacketQueue.h  Player.cpp  PullRtmp.cpp  RtmpPusher.cpp  VideoStream.cpp  VideoStream.h  day7.cpp  native-lib.cpp
app/src/main/cpp/utils/: safe_queue.h
app/src/main/java/com/mind/andffme/: AndFFmeHelper.kt  BaseActivity.kt  Constants.java  Ext.kt  MainActivity.kt
app/src/main/java/com/mind/andffme/day/: DayPresenter.kt  DayTest.kt
app/src/main/java/com/mind/andffme/handler/: ConnectionReceiver.kt  OrientationHandler.kt
app/src/main/java/com/mind/andffme/listener/: OnHandleListener.kt  OnItemClickListener.kt  OnNetworkChangeListener.kt  OnSeekBarListener.kt
app/src/main/java/com/mind/andffme/pull/: RtmpPullActivity.kt  RtmpPullActivity2.kt  RtmpPullStreamPlayer.java
app/src/main/java/com/mind/andffme/pull/player/: PlayerManager.java
app/src/main/java/com/mind/andffme/pull/player/callback/: OnPreparedListener.java  OnProgressListener.java
app/src/main/java/com/mind/andffme/pull/player/play/: Player.java
app/src/main/java/com/mind/andffme/push/: LiveActivity.kt  PushActivity.kt  Pusher.java
app/src/main/java/com/mind/andffme/push/camera/: Camera2Helper.java  Camera2Listener.java  CameraHelper.java  CameraType.java
app/src/main/java/com/mind/andffme/push/listener/: LiveStateChangeListener.java  OnFrameDataCallback.java
app/src/main/java/com/mind/andffme/push/param/: AudioParam.java  VideoParam.java
app/src/main/java/com/mind/andffme/push/stream/: AudioStream.java  VideoStream.java  VideoStreamBase.java  VideoStreamNew.java
app/src/main/java/com/mind/andffme/push/util/: YUVUtil.java
app/src/main/java/com/mind/andffme/rtmp/: RtmpPullActivity.kt  RtmpPushActivity.kt
app/src/main/java/com/mind/andffme/rtsp/: RtspMediaPullActivity.kt  RtspPullActivity.kt
app/src/main/java/com/mind/andffme/view/: Gusterpolator.java  MultiToggleImageButton.java  TopRightWeightedLayout.java
app/src/main/res/layout/: activity_live.xml  activity_main.xml  activity_rtmp_pull.xml  activity_rtmp_pull_2.xml  activity_rtsp_media_pull.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mind/andffme/: ExampleUnitTest.kt
common/: build.gradle
common/src/main/cpp/: CMakeLists.txt
common/src/main/cpp/player/: AudioChannel.cpp  Player.cpp  VideoChannel.cpp  player-lib.cpp
common/src/main/cpp/player/include/: BaseChannel.h
common/src/main/cpp/rtsp/: RtspNativeCallBack.cpp  RtspPlayer.cpp  RtspPuller.cpp
common/src/main/cpp/rtsp/include/: RtspNativeCallBack.h  RtspPlayer.h
common/src/main/cpp/rtspm/: RtspMediaPuller.cpp
common/src/main/cpp/utils/: Constants.h  PacketQueue.h  safe_queue.h
common/src/main/java/com/dwayne/com/camera/: CameraHolder.java  CameraUtils.java
common/src/main/java/com/dwayne/com/rtsp/: RtspPull.java  RtspPullListener.java
common/src/main/java/com/dwayne/com/rtsp2/: RtspMediaPull.java  RtspMediaVideoPlayer.java
common/src/main/java/com/dwayne/com/ui/: SoftLivingView.java
gradle/wrapper/: gradle-wrapper.properties
